--- a/style.css
+++ b/style.css
@@ -4,22 +4,26 @@ background: url(./images/lake\ view.jpg)fixed;
 }
 #dala{
     font-family: 'Times New Roman', Times, serif;
+    position: fixed;
     color: rgb(166, 255, 0);
-    text-align: center;
-    position: sticky;
+    text-align:right;
     cursor: pointer;
     
 }
-#dala+img{
- text-align: center;
-}
-.cage+div{
-    
-}
-.trasport+img {
-}
-}
+#dala+img{ 
+    display: block;
 
+  width: 500px;
+  border-radius: 50%;
+}
+img{
+     max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  padding:10px;
+    width: 500px; 
+    cursor: pointer;
+    }
 footer{
     color: aquamarine;
     position: static;
